# explore-cioos

./: .dockerignore  .env.coolify  .env.coolify-dev.sample  .env.production  .env.sample  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CODEOWNER  Dockerfile  Obis_Datasets.json  README.md  ceda_cron.sh  clearPrefect.sh  cron.sh  data_loader.sh  data_loader_test.sh  docker-compose-frontend.yaml  docker-compose.coolify.yaml  docker-compose.coolify.yml  docker-compose.override.yaml.sample  docker-compose.production.yaml  docker-compose.worker.yaml  docker-compose.yaml  harvest_config.production.yaml  harvest_config.sample.yaml  package-lock.json  pyproject.toml  recreate_database.sh  refresh_cache.sh  run_harvest.sh  sample.env  testOBISHarvester.py
.claude/: settings.json
ceda-web-api/: .env.sample  app.js  db.js  package-lock.json  package.json
cli/: .env.sample  .gitignore  README.md  cde.py  clear_redis.py  cron_commands.py  db.py  dbtesting.py  harvester.py  pyproject.toml  redis_commands.py  sqlscripts.py
database/: 1_schema.sql  2_triggers.sql  3_ckan_process.sql  4_create_hexes.sql  5_profile_process.sql  6_remove_all_data.sql  7_contraints.sql  7_range_functions.sql  7_set_contraints.sql  8_range_functions.sql  9_incremental_upsert.sql  Dockerfile  README.md  ckan_process.sql  create_hexes.sql  profile_process.sql  schema.sql  triggers.sql
db-loader/: README.md  pyproject.toml  setup.py
db-loader/cde_db_loader/: __main__.py  populate_vernaculars.py
db-loader/tests/: conftest.py  pyproject.toml
db-loader/tests/unit/: test_db_loader.py
docs/: api.md  architecture.md  configuration.md  data_flow.md  dependencies.md  execution_flow.md  feat-obis-harvester-changes.md  harvest_validator.md  incremental-harvest-jsonld-hash-plan.md  integrations.md  obis-branch-overview.md  onboarding_guide.md  repository_summary.md  technical_debt.md  tests.md
download_scheduler/: .env.sample  .gitignore  Dockerfile  README.md  download_email.py  downloader_scheduler.py  pyproject.toml  setup.py
download_scheduler/download_scheduler/: __main__.py  download_email.py  download_scheduler.py  health_server.py
download_scheduler/download_scheduler/templates/: completed-en.j2  completed-fr.j2  datasets_list.j2  failed-en.j2  failed-fr.j2  footer.j2  no-data-en.j2  no-data-fr.j2
download_scheduler/download_scheduler/test_emails/: completed.json  failed.json  no-data.json
downloader/: MANIFEST.in  README.md  example.py  pyproject.toml  setup.py  test_downloader.sh  test_erddap_downloader.py  test_query.json
downloader/erddap_downloader/: __init__.py  __main__.py  download_ckan_pdf.py  download_erddap.py  download_pdf.py  downloader_scheduler.py  downloader_wrapper.py  eovs_to_standard_name.json  sample_blob.json  zip_folder.py
downloader/erddap_downloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
downloader/test/: adcp_query.json  cross_meridional_query.json  failed_query.json  lat_long_quey.json  no_polygon.json  sample_blob.json  test_erddap_downloader.py  test_multiple_dataset_query.json  test_multiple_hakai_dataset_query.json  test_query.json
downloader/tests/: test_downloader_queries.py
downloader/tests/queries/: no_polygon.json  sample_blob.json
downloader/utils/: downloader_wrapper.py  sample_blob.json
downloads/: README.md
erddap_estimate/: setup.py
frontend/: .babelrc  .eslintrc.js  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  report.20220106.114228.37891.0.001.json  test.js  webpack.config.development.js  webpack.config.js  webpack.config.production.js
harvest-dashboard/: Dockerfile  _smoketest.py  pyproject.toml
harvest-dashboard/app/: config.py  db.py  main.py  prefect_client.py  queries.py  slug.py
harvest-dashboard/app/templates/: 404.html  _dataset_rows.html  _trigger_result.html  base.html  dataset.html  index.html  run.html  server.html
harvester/: .env.sample  .gitignore  Dockerfile  MANIFEST.in  README.md  cioos_erddap_servers.csv  pyproject.toml  run.sh  setup.py  uml_diagram.md  uml_diagram.txt  worker-entrypoint.sh
harvester/cde_harvester/: CDEComplianceChecker.py  ERDDAP.py  __main__.py  base_harvester.py  cde_to_goos_eov.json  database.py  dataset.py  dataset_state.py  deploy.py  eov_standard_names.json  erddap_harvester.py  goos_eov_to_standard_name.json  harvest_erddap.py  harvest_errors.py  logging_utils.py  obis2cioos.py  obis_geo_filter.py  obis_harvester.py  platform_ioos_to_l06.py  prefect_pipeline.py  profiles.py  redisFunctions.py  run_flow.py  schemas.py  trajectories.py  utils.py
harvester/cde_harvester/ckan/: __main__.py  create_ckan_erddap_link.py  create_ckan_obis_link.py
harvester/cde_harvester/data/: canada_eez_land.wkt  cf_standard_names.csv  platform_nerc_ioos_l06.csv  platform_nerc_l06_codes_and_labels.csv
harvester/harvest_validator/: __init__.py  __main__.py  analyzers.py  collectors.py  quick_check.py  reporter.py  runner.py
harvester/scripts/: build_canada_eez_land_wkt.py
harvester/tests/: conftest.py  pyproject.toml
harvester/tests/integration/: test_full_pipeline.py
harvester/tests/unit/: test_ckan.py  test_compliance_checker.py  test_csv_generation.py  test_erddap_client.py  test_harvest_erddap.py  test_obis_geo_filter.py  test_profiles.py  test_utils.py
nginx/: Dockerfile  logrotate.conf  nginx.conf  start.sh
obis/: 06704bbe-f905-4b5e-b797-a216cb791eb8.json  06704bbe-f905-4b5e-b797-a216cb791eb8_metadata.json  06bff0de-1ed7-460e-bfc4-25e020c8886b.json  06bff0de-1ed7-460e-bfc4-25e020c8886b_metadata.json  0d0431b2-fefa-485a-82c3-f1704c7c82cb.json  0d0431b2-fefa-485a-82c3-f1704c7c82cb_metadata.json  (+118 more)
scraper/: TODO  (+6 more)
tests/: pyproject.toml
tests/integration/: test_full_pipeline.py
tests/unit/: test_dataset.py  test_db_loader.py  test_erddap_client.py  test_harvest_erddap.py
tests/validation_reports/20260602_164156/: events.jsonl  report.json  report.md
tests/validation_reports/20260602_164345/: events.jsonl  report.json  report.md
tests/validation_reports/20260602_164813/: events.jsonl  report.json  report.md
(+226 files in other folders)
