[project]
name = "explore-cioos"
version = "0.1.0"
description = "CIOOS Explorer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "download-scheduler",
    "harvester",
]

[tool.uv.sources]
download-scheduler = { path = "download_scheduler" }
harvester = { path = "harvester" }

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["cde_harvester", "cde_db_loader", "erddap_downloader", "download_scheduler"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
