[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "diskcache>=5.6.3",
    "dotenv>=0.9.9",
    "lxml>=6.0.0",
    "numpy==1.26.4 ",
    "pandas==1.5.3",
    "psycopg2-binary>=2.9.10",
    "python-crontab>=3.3.0",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sentry-sdk>=2.35.0",
    "SQLAlchemy>=1.4.16,<2.0",
    "typer>=0.16.1",
]
