[project]
name = "download-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "downloader",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sentry-sdk>=2.38.0",
    "sqlalchemy<2.0.0",
]

[tool.uv.sources]
downloader = { path = "../downloader" }
