[project]
name = "harvest-dashboard"
version = "0.1.0"
description = "Public dashboard showing per-run harvest status for every dataset on every CIOOS-configured ERDDAP server."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
