[tool.poetry]
name = "cde-harvester"
version = "0.1.0"
description = "Harvests metadata data from a list of ERDDAP servers and stores it in a database to be use by the CIOOS Data Explorer"
authors = [
    "Nate Rosenstock",
    "Jessy Barrette <30420025+JessyBarrette@users.noreply.github.com>"
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
erddap-python = "^1.0.0"
SQLAlchemy = "^2.0.28"
loguru = "^0.7.2"
click = "^8.1.7"
python-dotenv = "^1.0.1"
sentry-sdk = {extras = ["loguru"], version = "^1.43.0"}
pyyaml = "^6.0.1"
numpy = "^1.26.4"
diskcache = "^5.6.3"
lxml = "^5.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
