[project]
name = "harvester"
version = "0.2.0"
description = "CIOOS Explorer Harvester"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "db-loader",
    "diskcache>=5.6.3",
    "erddapy>=2.2.0",
    "lxml>=5.1.0",
    "numpy<2.0.0",
    "pandas<2.0.0",
    "prefect>=3.0.0",
    "prefect-docker>=0.6.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "redis>=6.4.0",
    "requests>=2.31.0",
    "sentry-sdk>=1.43.0",
    "shapely>=2.0.3",
    "sqlalchemy>=2.0.0,<3.0.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cde_harvester"]

[tool.uv.sources]
db-loader = { path = "../db-loader" }

