[project]
name = "cioos-harvester-tests"
version = "0.1.0"
description = "Validation test suite for the CIOOS data harvester pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "harvester",
    "db-loader",
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]

[tool.uv.sources]
harvester = { path = "../harvester", editable = true }
db-loader = { path = "../db-loader", editable = true }

[tool.pytest.ini_options]
testpaths = ["unit", "integration"]
addopts = "-v --tb=short"
